// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineFilter shows an input with no value when filter is empty 1`] = `
<div
  className="outline-filter"
>
  <form>
    <input
      className="outline-filter-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Filter functions"
      type="text"
      value=""
    />
  </form>
</div>
`;

exports[`OutlineFilter shows an input with the filter when it is not empty 1`] = `
<div
  className="outline-filter"
>
  <form>
    <input
      className="outline-filter-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Filter functions"
      type="text"
      value="abc"
    />
  </form>
</div>
`;
